src/objects/MT_MediaBuildingBlockHistory__c.object
<CustomObject>
    <fields>
        <fullName>MT_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MediaBuildingBlock_ref__c</fullName>
        <label>Media Building Block</label>
        <referenceTo>MT_MediaBuildingBlock__c</referenceTo>
        <relationshipLabel>Media Building Block Histories</relationshipLabel>
        <relationshipName>Media_Building_Block_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MT_MediaCampaign_BMV__c</fullName>
        <label>Media Campaign BMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_MonthlyShifting__c</fullName>
        <label>monatliches Schieberecht</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_PlannedAmount__c</fullName>
        <label>Planned Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_PlannedSponsoringBmv__c</fullName>
        <label>Sponsoring Gesamt Geplantes BMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_PlannedSpotBmv__c</fullName>
        <label>Spot Gesamt Geplantes BMV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_SLMAccordingToContract__c</fullName>
        <label>SLM laut Vertrag</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silber</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_SLMAfterYield__c</fullName>
        <label>SLM nach Yield</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bronze</fullName>
                </value>
                <value>
                    <fullName>Silber</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Platin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_SLMDifference__c</fullName>
        <label>SLM Abweichung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MT_SendershareContractCommitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sendershare vertraglich committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_SumBMVMonthlyPlan__c</fullName>
        <label>Sum of BMV Monthly Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_TimeShare01000600Max__c</fullName>
        <description>Maximum share of the media delivery on this timeslot</description>
        <label>Share Time 01:00 - 06:00 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TimeShare01000600Min__c</fullName>
        <description>Minimum share of the media delivery on this timeslot</description>
        <label>Share Time 01:00 - 06:00 Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TimeShare06000900Max__c</fullName>
        <description>Maximum share of the media delivery on this timeslot</description>
        <label>Share Time 06:00 - 09:00 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TimeShare06000900Min__c</fullName>
        <description>Minimum share of the media delivery on this timeslot</description>
        <label>Share Time 06:00 - 09:00 Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TimeShare09001300Max__c</fullName>
        <description>Maximum share of the media delivery on this timeslot</description>
        <label>Share Time 09:00 - 13:00 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TimeShare09001300Min__c</fullName>
        <description>Minimum share of the media delivery on this timeslot</description>
        <label>Share Time 09:00 - 13:00 Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TimelinesharesContractCommitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Zeitschienenshares vertraglich committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_TvShareKabelEinsClassicsMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel kabel eins CLASSICS Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareKabelEinsClassicsMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel kabel eins CLASSICS Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareKabelEinsDokuMax__c</fullName>
        <label>Share Channel kabel eins Doku Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareKabelEinsDokuMin__c</fullName>
        <label>Share Channel kabel eins Doku Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareKabelEinsMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel kabel eins Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareKabelEinsMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel kabel eins Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareProSiebenFunMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel ProSieben FUN Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareProSiebenFunMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel ProSieben FUN Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareProSiebenMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel ProSieben Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareProSiebenMaxxMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel ProSieben MAXX Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareProSiebenMaxxMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel ProSieben MAXX Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareProSiebenMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel ProSieben Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSat1EmotionsMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel SAT.1 emotions Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSat1EmotionsMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel SAT.1 emotions Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSat1GoldMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel SAT.1 Gold Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSat1GoldMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel SAT.1 Gold Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSat1Max__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel SAT.1 Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSat1Min__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel SAT.1 Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSixxMax__c</fullName>
        <description>Maximum share of the media delivery on this TV channel</description>
        <label>Share Channel sixx Max</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_TvShareSixxMin__c</fullName>
        <description>Minimum share of the media delivery on this TV channel</description>
        <label>Share Channel sixx Min</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Digital</fullName>
                </value>
                <value>
                    <fullName>DooH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_YearlyShifting__c</fullName>
        <label>jährliches Schieberecht</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Media Building Block History</label>
    <nameField>
        <label>Media Building Block History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Building Block Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>